--- a/dev/scss/_admin.scss
+++ b/dev/scss/_admin.scss
@@ -210,3 +210,15 @@ body #TB_window {
     margin-bottom: 0px;
   }
 }
+
+.swal2-container {
+  z-index: 161000 !important;
+}
+
+.optimization-pdf {
+  &.widefat {
+    td {
+      vertical-align: middle;
+    }
+  }
+}
