--- a/dev/scss/_admin.scss
+++ b/dev/scss/_admin.scss
@@ -211,14 +211,58 @@ body #TB_window {
   }
 }
 
-.swal2-container {
-  z-index: 161000 !important;
-}
-
 .optimization-pdf {
   &.widefat {
     td {
       vertical-align: middle;
     }
   }
+}
+
+.ilovepdf-restore-dialog,
+#poststuff .ilovepdf-restore-dialog {
+  border: none;
+  border-radius: 20px;
+  padding: 40px;
+  animation: fade-out 0.2s ease-out;
+
+  .ilovepdf-title-dialog {
+    text-align: center;
+    font-size: 2.8em;
+    color: #e5322d;
+  }
+
+  .ilovepdf-content-dialog {
+    font-size: 18px;
+    font-weight: 500;
+    color: #838383;
+  }
+
+  .ilovepdf-btn-groups {
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+  }
+
+  &::backdrop {
+    background-color: rgba(56,56,56,0.75);
+  }
+
+  &[open] {
+    animation: openDialog 300ms ease-in-out 0s 1 normal forwards;
+  }
+}
+
+/* Animation keyframes */
+@keyframes openDialog {
+	0% {
+		opacity: 0;
+		transform: scale(0.6);
+	}
+
+	100% {
+		opacity: 1;
+		transform: scale(1);
+	}
 }
